--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./style/nullstyle.css">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/mobile.css">
-    <script src="https://kit.fontawesome.com/1b1ded6b38.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,14 +16,14 @@
     <header id="home">
         <div class="wrapper">
             <nav class="header__nav">
-                <span class="nav__logo"><a href="#home" class="nav__logo-link">Leonor</a></span>
-                <ul class="nav__list list">
-                    <li class="list__item"><a class="link" href="#home">Home</a></li>
-                    <li class="list__item"><a class="link" href="#about">About</a></li>
-                    <li class="list__item"><a class="link" href="#skills">Skills</a></li>
-                    <li class="list__item"><a class="link" href="#portfolio">Portfolio</a></li>
-                    <li class="list__item"><a class="link" href="#contact">Contact me</a></li>
-                </ul>
+                <a class="link" href="#home">Leonor</a>
+                <div class="nav__list">
+                    <a class="link" href="#home">Home</a>
+                    <a class="link" href="#about">About</a>
+                    <a class="link" href="#skills">Skills</a>
+                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="#contact">Contact me</a>
+                </div>
                 <div class="hamburger__menu">
                     <input id="menu__toggle" type="checkbox">
                     <label class="menu__btn" for="menu__toggle">
