--- a/index.html
+++ b/index.html
@@ -15,38 +15,36 @@
 <body>
     <!-- <button id="top-btn"><i class="fa-solid fa-angle-up"></i></i></button> -->
     <header id="home">
-        <div class="wrapper">
-            <nav data-aos="fade-down" class="header__nav">
-                <a class="link" href="#home">Leonor</a>
-                <div class="nav__list">
-                    <a class="link" href="#home">Home</a>
-                    <a class="link" href="#about">About</a>
-                    <a class="link" href="#skills">Skills</a>
-                    <a class="link" href="#portfolio">Portfolio</a>
-                    <a class="link" href="#contact">Contact me</a>
-                </div>
-                <div class="hamburger__menu">
-                    <input id="menu__toggle" type="checkbox">
-                    <label class="menu__btn" for="menu__toggle">
-                        <span></span>
-                    </label>
+        <nav data-aos="fade-down" class="header__nav">
+            <a class="link" href="#home">Leonor</a>
+            <div class="nav__list">
+                <a class="link" href="#home">Home</a>
+                <a class="link" href="#about">About</a>
+                <a class="link" href="#skills">Skills</a>
+                <a class="link" href="#portfolio">Portfolio</a>
+                <a class="link" href="#contact">Contact me</a>
+            </div>
+            <div class="hamburger__menu">
+                <input id="menu__toggle" type="checkbox">
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
 
-                    <ul class="menu__box">
-                        <li><a href="#home" class="menu__item">Home</a></li>
-                        <li><a href="#about" class="menu__item">About</a></li>
-                        <li><a href="#skills" class="menu__item">Skills</a></li>
-                        <li><a href="#portfolio" class="menu__item">Portfolio</a></li>
-                        <li><a href="#contact" class="menu__item">Contact me</a></li>
-                    </ul>
-                </div>
-            </nav>
+                <ul class="menu__box">
+                    <li><a href="#home" class="menu__item">Home</a></li>
+                    <li><a href="#about" class="menu__item">About</a></li>
+                    <li><a href="#skills" class="menu__item">Skills</a></li>
+                    <li><a href="#portfolio" class="menu__item">Portfolio</a></li>
+                    <li><a href="#contact" class="menu__item">Contact me</a></li>
+                </ul>
+        </nav>
 
-            <article data-aos="zoom-in-up" data-aos-delay="300" class="header__title center">
-                <h1 class="title">Hi, I’m Leonor</h1>
-                <h2 class="descr">Frontend developer and web designer</h2>
-                <h2 class="descr">Medium level experience in web design and
-                    development knowledge.</h2>
-            </article>
+        <article data-aos="zoom-in-up" data-aos-delay="300" class="header__title center">
+            <h1 class="title">Hi, I’m Leonor</h1>
+            <h2 class="descr">Frontend developer and web designer</h2>
+            <h2 class="descr">Medium level experience in web design and
+                development knowledge.</h2>
+        </article>
         </div>
     </header>
 
@@ -54,26 +52,26 @@
 
         <div class="wrapper">
             <div class="about__title center">
-                <p class="title">About Me</p>
-                <p class="descr">My introduction</p>
+                <h1 class="title">About Me</h1>
+                <h2 class="descr">My introduction</h2>
             </div>
             <div class="about__info">
                 <div class="flex">
                     <img src="./img/me.2.jpg" alt="my avatar">
 
                     <div class="text-info text-info__flex">
-                        <p class="descr">Web developer/web designer with
-                            medium knowledge. I have been doing this for about 8 months.</p>
+                        <h1 class="descr">Web developer/web designer with
+                            medium knowledge. I have been doing this for about 8 months.</h1>
 
                         <div class="subtitle-info subtitle-info__flex">
-                            <p class="subtitle">7+ months</p>
-                            <p class="descr">Years <br>
-                                experience</p>
+                            <h1 class="subtitle">7+ months</h1>
+                            <h2 class="descr">Years <br>
+                                experience</h2>
                         </div>
                         <div class="subtitle-info subtitle-info__flex">
-                            <p class="subtitle">2</p>
-                            <p class="descr">Comlited <br>
-                                web projects</p>
+                            <h1 class="subtitle">2</h1>
+                            <h2 class="descr">Comlited <br>
+                                web projects</h2>
                         </div>
                     </div>
                 </div>
@@ -83,15 +81,15 @@
 
     <section id="skills" class="skills">
         <div class="about__title center">
-            <p class="title">Skills</p>
-            <p class="descr">My technical level</p>
+            <h1 class="title">Skills</h1>
+            <h2 class="descr">My technical level</h2>
         </div>
         <div class="skills-flex">
             <div class="front">
 
                 <div class="text-block">
-                    <div class="subtitle">Frontend developer</div>
-                    <p class="descr">More 6 months</p>
+                    <h1 class="subtitle">Frontend developer</h1>
+                    <h2 class="descr">More 6 months</>
                 </div>
 
                 <div class="pr-bar__html">
@@ -116,8 +114,8 @@
             <div class="designer">
 
                 <div class="text-block">
-                    <div class="subtitle">Designer</div>
-                    <p class="descr">More 1 month</p>
+                    <h1 class="subtitle">Designer</h1>
+                    <h2 class="descr">More 1 month</h2>
                 </div>
 
                 <div class="pr-bar__figma">
@@ -142,18 +140,18 @@
 
     <section id="portfolio" class="portfolio">
         <div class="portfolio__title center">
-            <p class="title">Portfolio</p>
-            <p class="descr">My works</p>
+            <h1 class="title">Portfolio</h1>
+            <h2 class="descr">My works</h2>
         </div>
         <div class="portfolio__gallery">
             <a class="project-link" target="_blank"
                 href="https://travycatty.github.io/leonor/other%20projects/LOGOIPSUM/www/index.html">
-                <div class="first"><img src="./img/Logoipsum_logo.svg" alt=""></div>
+                <div class="first"><img src="./img/Logoipsum_logo.svg" alt="LOGOIPSUM"></div>
             </a>
             <a class="project-link" target="_blank"
                 href="https://travycatty.github.io/leonor/other%20projects/k%20e%20a/index.html">
                 <div class="second">
-                    <p>k e a</p>
+                    <h1>k e a</h1>
                 </div>
             </a>
         </div>
@@ -162,9 +160,10 @@
 
     <section data-aos="fade-up" id="contact" class="contact">
         <div class="portfolio__title center">
-            <p class="title">Contact me</p>
-            <p class="descr">Get in touch</p>
+            <h1 class="title">Contact me</h1>
+            <h2 class="descr">Get in touch</h2>
         </div>
+        <!-- Доделать форму -->
         <form class="form" action="#" method="get">
             <div><input placeholder="Name" class="form-name" type="text" name="username" id=""></div>
             <div><input placeholder="What’s your email?" class="form-email" type="email" name="useremale" id="">
