--- a/index.html
+++ b/index.html
@@ -39,98 +39,104 @@
                 </ul>
         </nav>
 
-        <article data-aos="zoom-in-up" data-aos-delay="300" class="header__title center">
-            <h1 class="title">Hi, I’m Leonor</h1>
-            <h2 class="descr">Frontend developer and web designer</h2>
-            <h2 class="descr">Medium level experience in web design and
-                development knowledge.</h2>
-        </article>
+        <div id="wrapper wrapper-title">
+            <article data-aos="zoom-in-up" data-aos-delay="300" class="header__title center">
+                <h1 class="title">Hi, I’m Leonor</h1>
+                <h2 class="descr">Frontend developer and web designer</h2>
+                <h2 class="descr">Medium level experience in web design and
+                    development knowledge.</h2>
+            </article>
+        </div>
         </div>
     </header>
 
-    <section id="about" class="about">
+    <div id="wrapper">
+        <section id="about" class="about">
 
-        <div class="wrapper">
-            <div class="about__title center">
-                <h1 class="title">About Me</h1>
-                <h2 class="descr">My introduction</h2>
-            </div>
-            <div class="about__info">
-                <div class="flex">
-                    <img src="./img/me.2.jpg" alt="my avatar">
+            <div class="wrapper">
+                <div class="about__title center">
+                    <h1 class="title">About Me</h1>
+                    <h2 class="descr">My introduction</h2>
+                </div>
+                <div class="about__info">
+                    <div class="flex">
+                        <img src="./img/me.2.jpg" alt="my avatar">
 
-                    <div class="text-info text-info__flex">
-                        <h1 class="descr">Web developer/web designer with
-                            medium knowledge. I have been doing this for about 8 months.</h1>
+                        <div class="text-info text-info__flex">
+                            <h1 class="descr">Web developer/web designer with
+                                medium knowledge. I have been doing this for about 8 months.</h1>
 
-                        <div class="subtitle-info subtitle-info__flex">
-                            <h1 class="subtitle">7+ months</h1>
-                            <h2 class="descr">Years <br>
-                                experience</h2>
-                        </div>
-                        <div class="subtitle-info subtitle-info__flex">
-                            <h1 class="subtitle">2</h1>
-                            <h2 class="descr">Comlited <br>
-                                web projects</h2>
+                            <div class="subtitle-info subtitle-info__flex">
+                                <h1 class="subtitle">7+ months</h1>
+                                <h2 class="descr">Years <br>
+                                    experience</h2>
+                            </div>
+                            <div class="subtitle-info subtitle-info__flex">
+                                <h1 class="subtitle">2</h1>
+                                <h2 class="descr">Comlited <br>
+                                    web projects</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <section id="skills" class="skills">
-        <div class="about__title center">
-            <h1 class="title">Skills</h1>
-            <h2 class="descr">My technical level</h2>
-        </div>
-        <div class="skills-flex">
-            <div class="front">
-
-                <div class="text-block">
-                    <h1 class="subtitle">Frontend developer</h1>
-                    <h2 class="descr">More 6 months</>
-                </div>
-
-                <div class="pr-bar__html">
-                    <span class="subtitle">HTML</span>
-                    <span class="descr">80%</span>
-                    <div class="progressbar">
-                        <span class="progress-bar"></span>
-                    </div>
-                </div>
-
-                <div class="pr-bar__css">
-
-                    <span class="subtitle">CSS</span>
-                    <span class="descr">70%</span>
-
-                    <div class="progressbar">
-                        <span class="progress-bar"></span>
-                    </div>
-                </div>
+        <div id="wrapper">
+            <div class="about__title center">
+                <h1 class="title">Skills</h1>
+                <h2 class="descr">My technical level</h2>
             </div>
+            <div class="skills-flex">
+                <div class="front">
 
-            <div class="designer">
+                    <div class="text-block">
+                        <h1 class="subtitle">Frontend developer</h1>
+                        <h2 class="descr">More 6 months</>
+                    </div>
 
-                <div class="text-block">
-                    <h1 class="subtitle">Designer</h1>
-                    <h2 class="descr">More 1 month</h2>
-                </div>
+                    <div class="pr-bar__html">
+                        <span class="subtitle">HTML</span>
+                        <span class="descr">80%</span>
+                        <div class="progressbar">
+                            <span class="progress-bar"></span>
+                        </div>
+                    </div>
 
-                <div class="pr-bar__figma">
-                    <span class="subtitle">Figma</span>
-                    <span class="descr">80%</span>
-                    <div class="progressbar">
-                        <span class="progress-bar"></span>
+                    <div class="pr-bar__css">
+
+                        <span class="subtitle">CSS</span>
+                        <span class="descr">70%</span>
+
+                        <div class="progressbar">
+                            <span class="progress-bar"></span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="pr-bar__photoshop">
-                    <span class="subtitle">Photoshop</span>
-                    <span class="descr">60%</span>
-                    <div class="progressbar">
-                        <span class="progress-bar"></span>
+                <div class="designer">
+
+                    <div class="text-block">
+                        <h1 class="subtitle">Designer</h1>
+                        <h2 class="descr">More 1 month</h2>
+                    </div>
+
+                    <div class="pr-bar__figma">
+                        <span class="subtitle">Figma</span>
+                        <span class="descr">80%</span>
+                        <div class="progressbar">
+                            <span class="progress-bar"></span>
+                        </div>
+                    </div>
+
+                    <div class="pr-bar__photoshop">
+                        <span class="subtitle">Photoshop</span>
+                        <span class="descr">60%</span>
+                        <div class="progressbar">
+                            <span class="progress-bar"></span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,38 +145,42 @@
 
 
     <section id="portfolio" class="portfolio">
-        <div class="portfolio__title center">
-            <h1 class="title">Portfolio</h1>
-            <h2 class="descr">My works</h2>
-        </div>
-        <div class="portfolio__gallery">
-            <a class="project-link" target="_blank"
-                href="https://travycatty.github.io/leonor/other%20projects/LOGOIPSUM/www/index.html">
-                <div class="first"><img src="./img/Logoipsum_logo.svg" alt="LOGOIPSUM"></div>
-            </a>
-            <a class="project-link" target="_blank"
-                href="https://travycatty.github.io/leonor/other%20projects/k%20e%20a/index.html">
-                <div class="second">
-                    <h1>k e a</h1>
-                </div>
-            </a>
+        <div id="wrapper">
+            <div class="portfolio__title center">
+                <h1 class="title">Portfolio</h1>
+                <h2 class="descr">My works</h2>
+            </div>
+            <div class="portfolio__gallery">
+                <a class="project-link" target="_blank"
+                    href="https://travycatty.github.io/leonor/other%20projects/LOGOIPSUM/www/index.html">
+                    <div class="first"><img src="./img/Logoipsum_logo.svg" alt="LOGOIPSUM"></div>
+                </a>
+                <a class="project-link" target="_blank"
+                    href="https://travycatty.github.io/leonor/other%20projects/k%20e%20a/index.html">
+                    <div class="second">
+                        <h1>k e a</h1>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 
 
-    <section data-aos="fade-up" id="contact" class="contact">
-        <div class="portfolio__title center">
-            <h1 class="title">Contact me</h1>
-            <h2 class="descr">Get in touch</h2>
-        </div>
-        <!-- Доделать форму -->
-        <form class="form" action="#" method="get">
-            <div><input placeholder="Name" class="form-name" type="text" name="username" id=""></div>
-            <div><input placeholder="What’s your email?" class="form-email" type="email" name="useremale" id="">
+    <section id="contact" class="contact">
+        <div id="wrapper">
+            <div class="portfolio__title center">
+                <h1 class="title">Contact me</h1>
+                <h2 class="descr">Get in touch</h2>
             </div>
-            <div><input placeholder="Your qeustion..." class="form-message" type="text"></div>
-            <button class="button" type="submit">Send message</button>
-        </form>
+            <!-- Доделать форму -->
+            <form class="form" action="#" method="get">
+                <div><input placeholder="Name" class="form-name" type="text" name="username" id=""></div>
+                <div><input placeholder="What’s your email?" class="form-email" type="email" name="useremale" id="">
+                </div>
+                <div><input placeholder="Your qeustion..." class="form-message" type="text"></div>
+                <button class="button" type="submit">Send message</button>
+            </form>
+        </div>
     </section>
 
 
