Import font, made about section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./style/nullstyle.css">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/mobile.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -40,8 +39,8 @@
         </nav>
 
         <div id="wrapper wrapper-title">
-            <article data-aos="zoom-in-up" data-aos-delay="300" class="header__title center">
-                <h1 class="title">Hi, I’m Leonor</h1>
+            <article class=" header__title center">
+                <h1 class="title">Hi, I’m Leonor Carter</h1>
                 <h2 class="descr">Frontend developer and web designer</h2>
                 <h2 class="descr">Medium level experience in web design and
                     development knowledge.</h2>
@@ -52,30 +51,26 @@
 
     <div id="wrapper">
         <section id="about" class="about">
-
             <div class="wrapper">
-                <div class="about__title center">
-                    <h1 class="title">About Me</h1>
-                    <h2 class="descr">My introduction</h2>
-                </div>
-                <div class="about__info">
-                    <div class="flex">
-                        <img src="./img/me.2.jpg" alt="my avatar">
+                <h1 class="title">About Me</h1>
+                <h2 class="descr">My introduction</h2>
+                <div class="flex">
+                    <img src="./img/me.2.jpg" alt="my avatar">
 
-                        <div class="text-info text-info__flex">
-                            <h1 class="descr">Web developer/web designer with
-                                medium knowledge. I have been doing this for about 8 months.</h1>
+                    <div class="about-text">
+                        <h1 class="subtitle">My main focus is to create educational and interactive websites that
+                            provide the best user experience. I know HTML, CSS, JavaScript, React and other technologies
+                            that are used to create interfaces.</h1>
 
-                            <div class="subtitle-info subtitle-info__flex">
-                                <h1 class="subtitle">7+ months</h1>
-                                <h2 class="descr">Years <br>
-                                    experience</h2>
-                            </div>
-                            <div class="subtitle-info subtitle-info__flex">
-                                <h1 class="subtitle">2</h1>
-                                <h2 class="descr">Comlited <br>
-                                    web projects</h2>
-                            </div>
+                        <div class="subtitle-flex">
+                            <h1 class="subtitle">Over 1.5 years</h1>
+                            <h2 class="descr">Years <br>
+                                experience</h2>
+                        </div>
+                        <div class="subtitle-flex">
+                            <h1 class="subtitle">2</h1>
+                            <h2 class="descr">Comlited <br>
+                                web projects</h2>
                         </div>
                     </div>
                 </div>
@@ -204,8 +199,6 @@
             </div>
         </div>
     </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./js/AOS.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
