--- a/index.html
+++ b/index.html
@@ -49,49 +49,45 @@
         </div>
     </header>
 
-    <div id="wrapper">
-        <section id="about" class="about">
-            <div class="wrapper">
-                <h1 class="title">About Me</h1>
-                <h2 class="descr">My introduction</h2>
-                <div class="flex">
-                    <img src="./img/me.2.jpg" alt="my avatar">
+    <section id="about" class="about">
+        <div id="wrapper">
+            <h1 class="title">About Me</h1>
+            <h2 class="descr">My introduction</h2>
+            <div class="flex">
+                <img src="./img/me.2.jpg" alt="my avatar">
 
-                    <div class="about-text">
-                        <h1 class="subtitle">My main focus is to create educational and interactive websites that
-                            provide the best user experience. I know HTML, CSS, JavaScript, React and other technologies
-                            that are used to create interfaces.</h1>
+                <div class="about-text">
+                    <h1 class="subtitle">My main focus is to create educational and interactive websites that
+                        provide the best user experience. I know HTML, CSS, JavaScript, React and other technologies
+                        that are used to create interfaces.</h1>
 
-                        <div class="subtitle-flex">
-                            <h1 class="subtitle">Over 1.5 years</h1>
-                            <h2 class="descr">Years <br>
-                                experience</h2>
-                        </div>
-                        <div class="subtitle-flex">
-                            <h1 class="subtitle">2</h1>
-                            <h2 class="descr">Comlited <br>
-                                web projects</h2>
-                        </div>
+                    <div class="subtitle-flex">
+                        <h1 class="subtitle">Over 1.5 years</h1>
+                        <h2 class="descr">Years <br>
+                            experience</h2>
+                    </div>
+                    <div class="subtitle-flex">
+                        <h1 class="subtitle">2</h1>
+                        <h2 class="descr">Comlited <br>
+                            web projects</h2>
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
     <section id="skills" class="skills">
         <div id="wrapper">
-            <div class="about__title center">
+            <div class="center">
                 <h1 class="title">Skills</h1>
                 <h2 class="descr">My technical level</h2>
             </div>
             <div class="skills-flex">
                 <div class="front">
-
                     <div class="text-block">
                         <h1 class="subtitle">Frontend developer</h1>
                         <h2 class="descr">More 6 months</>
                     </div>
-
                     <div class="pr-bar__html">
                         <span class="subtitle">HTML</span>
                         <span class="descr">80%</span>
@@ -99,12 +95,16 @@
                             <span class="progress-bar"></span>
                         </div>
                     </div>
-
                     <div class="pr-bar__css">
-
                         <span class="subtitle">CSS</span>
                         <span class="descr">70%</span>
-
+                        <div class="progressbar">
+                            <span class="progress-bar"></span>
+                        </div>
+                    </div>
+                    <div class="pr-bar__react">
+                        <span class="subtitle">React</span>
+                        <span class="descr">50%</span>
                         <div class="progressbar">
                             <span class="progress-bar"></span>
                         </div>
@@ -146,16 +146,18 @@
                 <h2 class="descr">My works</h2>
             </div>
             <div class="portfolio__gallery">
-                <a class="project-link" target="_blank"
-                    href="https://travycatty.github.io/leonor/other%20projects/LOGOIPSUM/www/index.html">
-                    <div class="first"><img src="./img/Logoipsum_logo.svg" alt="LOGOIPSUM"></div>
-                </a>
-                <a class="project-link" target="_blank"
-                    href="https://travycatty.github.io/leonor/other%20projects/k%20e%20a/index.html">
-                    <div class="second">
-                        <h1>k e a</h1>
-                    </div>
-                </a>
+                <div class="project project__britlex">
+                    <a target="_blank" href="https://travycatty.github.io/Britlex/">Britlex</a>
+                </div>
+                <div class="project project__perfume">
+                    <a target="_blank" href="https://travycatty.github.io/Perfume/">Perfume</a>
+                </div>
+                <div class="project project__dragndrop">
+                    <a target="_blank" href="https://travycatty.github.io/DragNDrop/">DragNDrop</a>
+                </div>
+                <div class="project project__kea">
+                    <a target="_blank" href="https://travycatty.github.io/k-e-a//">K E A</a>
+                </div>
             </div>
         </div>
     </section>
