--- a/index.html
+++ b/index.html
@@ -192,22 +192,17 @@
 
 
     <footer class="footer">
-        <div class="flex-box">
-            <div class="footer__title">
-                <p class="title">Leonor</p>
-                <p class="descr">Frontend developer <br>
-                    Web designer</p>
-            </div>
-            <div class="social-links">
-                <p class="subtitle">Follow me on</p>
-                <ul class="links">
-                    <li><a target="_blank" href="https://www.behance.net/leonidbgh2faf"><img src="./img/la_behance.svg"
-                                alt=""></a></li>
-                    <li><a target="_blank" href="https://www.instagram.com/travycattysu/"><img
-                                src="./img/akar-icons_instagram-fill.svg" alt=""></a></li>
-                    <li><a target="_blank" href="https://twitter.com/TravyCattySU"><img
-                                src="./img/akar-icons_twitter-fill.svg" alt=""></a></li>
-                </ul>
+        <div class="footer__title">
+            <h1 class="title">Leonor Carter</h1>
+            <h2 class="descr">Frontend developer <br>
+                Web designer</h2>
+        </div>
+        <div class="social-links">
+            <h1 class="title">Follow me</h1>
+            <div class="links">
+                <a href="https://instagram.com/travycattysu?igshid=NTc4MTIwNjQ2YQ==">Instagram</a>
+                <a href="https://ru.pinterest.com/TravyCatty/">Pinterest</a>
+                <a href="https://github.com/TravyCatty/">GitHub</a>
             </div>
         </div>
     </footer>
