add target _blank social links

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         <div class="social-links">
             <h1 class="title">Follow me</h1>
             <div class="links">
-                <a href="https://instagram.com/travycattysu?igshid=NTc4MTIwNjQ2YQ==">Instagram</a>
-                <a href="https://ru.pinterest.com/TravyCatty/">Pinterest</a>
-                <a href="https://github.com/TravyCatty/">GitHub</a>
+                <a target="_blank" href="https://instagram.com/travycattysu?igshid=NTc4MTIwNjQ2YQ==">Instagram</a>
+                <a target="_blank" href="https://ru.pinterest.com/TravyCatty/">Pinterest</a>
+                <a target="_blank" href="https://github.com/TravyCatty/">GitHub</a>
             </div>
         </div>
     </footer>
