--- a/index.html
+++ b/index.html
@@ -23,22 +23,10 @@
                 <a class="link" href="#portfolio">Portfolio</a>
                 <a class="link" href="#contact">Contact me</a>
             </div>
-            <div class="hamburger__menu">
-                <input id="menu__toggle" type="checkbox">
-                <label class="menu__btn" for="menu__toggle">
-                    <span></span>
-                </label>
 
-                <ul class="menu__box">
-                    <li><a href="#home" class="menu__item">Home</a></li>
-                    <li><a href="#about" class="menu__item">About</a></li>
-                    <li><a href="#skills" class="menu__item">Skills</a></li>
-                    <li><a href="#portfolio" class="menu__item">Portfolio</a></li>
-                    <li><a href="#contact" class="menu__item">Contact me</a></li>
-                </ul>
         </nav>
 
-        <div id="wrapper wrapper-title">
+        <div id="wrapper">
             <article class=" header__title center">
                 <h1 class="title">Hi, I’m Leonor Carter</h1>
                 <h2 class="descr">Frontend developer and web designer</h2>
