--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
                 
                 <a class="link" href="#home">Leonor</a>
-                <button class="burger none">Burger</button>
+                <button class="burger none"></button>
                 <div class="nav__list">
                     <a class="link" href="#home">Home</a>
                     <a class="link" href="#about">About</a>
